# k8s-apiserver

./: BUILD.bazel  boilerplate.go.txt  kubeconfig
apiserver.local.config/certificates/: apiserver.crt  apiserver.key
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
docs/: manifest.json
docs/examples/lin/: lin.yaml
docs/includes/: _generated_lin_v1_cclin_concept.md  _generated_listmeta_v1_meta_definition.md  _generated_objectmeta_v1_meta_definition.md
docs/openapi-spec/: swagger.json
docs/static_includes/: _cclin.md
pkg/: doc.go
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/cclin/: doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/cclin/install/: doc.go  zz_generated.api.register.go
pkg/apis/cclin/v1/: doc.go  lin_types.go  lin_types_test.go  v1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/client/clientset_generated/clientset/: clientset.go  doc.go
pkg/client/clientset_generated/internalclientset/: clientset.go  doc.go
pkg/client/informers_generated/externalversions/: factory.go  generic.go
pkg/client/informers_generated/internalversion/: factory.go  generic.go
pkg/controller/: doc.go  zz_generated.api.register.go
pkg/controller/lin/: controller.go  controller_test.go  lin_suite_test.go  zz_generated.api.register.go
pkg/controller/sharedinformers/: doc.go  informers.go  zz_generated.api.register.go
pkg/openapi/: doc.go  openapi_generated.go
sample/: lin.yaml
(+33 files in other folders)
